# geodpy

./: .gitignore  LICENSE  README.md  geodesics.py  integrate.py  pyproject.toml  run.py  run_file.py  run_schwarzchild.py
docs/: 1_HowTo_trajectories.md  2_HowTo_coordinates.md  HowTo_coordinates.md  HowTo_plotters.md  HowTo_trajectories.md  README.md  class_Body.md  class_Geodesics.md  func_basic.md  func_expr_to_lambda.md  func_vector_to_lambda.md
docs/class_documentation/: README.md  class_Body.md  class_Geodesics.md  func_basic.md  func_expr_to_lambda.md  func_vector_to_lambda.md
docs/coordinates/: class_Cartesian.md  class_Coordinates.md  class_OblongEllipsoid.md  class_Spherical.md
examples/: kerr.py  new_schwarzchild.py  r.py  run_file.py  run_kerr.py  run_schwarzchild.py  schwarzchild.py  sitter_schwarzchild.py
examples/1_schwarzschild/: 1_clover_traj.py  2_crashing_traj.py  3_earth_ellipse.py  README.md  schwarszchild.py
examples/2_lemaitre/: 1_crashing_traj.py  README.md  lemaitre.py
examples/3_kerr/: 1_crashing_traj_2D.py  2_crashing_traj_3D.py  3_crashing_top_3D.py  4_orbit_traj_2D.py  5_orbit_traj_3D.py  README.md  kerr.py
examples/kerr/: README.md  falling_top.py  kerr.py  near_horizon.py  orbit.py  sucked_in.py  sucked_in_2D.py  sucked_in_3D.py
examples/leMaitre/: leMaitre.py  near_horizon.py
examples/lieu/: far.py  lieu.py
geodpy/: README.md  __init__.py  base_run.py  body.py  bodyplotter.py  coordinates.py  geodesics.py  plotter.py  plotters.py
source/: basic.py  body.py  geodesics.py  integration.py  to_lambda.py
src/geodpy/: tags  (+3 more)
(+68 files in other folders)
